--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="./favicon.ico" />
+    <link
+      rel="icon"
+      href="https://firebasestorage.googleapis.com/v0/b/prototype-storyflix.appspot.com/o/web%2Ffavicon.ico?alt=media&token=8c5ded12-f897-42ed-a033-d10e6e50268a"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
